deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movingstripes
  labels:
    app: movingstripes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movingstripes
  template:
    metadata:
      labels:
        app: movingstripes
    spec:
      containers:
        - name: movingstripes
          image: textninja/movingstripes:latest
          ports:
            - containerPort: 80
