deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movingstripes
  labels:
    app: movingstripes
spec:
  selector:
    app: movingstripes
  ports:
    - port: 80
      targetPort: 80
