deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movingstripes
  annotations:
    kubernetes.io/ingress.global-static-ip-name: textninja-ip
  labels:
    app: movingstripes
spec:
  rules:
    - host: dtc0003.textninja.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: movingstripes
              port:
                number: 80
